# goomba-moveset

./: .gitignore  Cargo.toml  README.md  modPath.txt  notes.txt
romf/: motion_list.yml  ui_chara_db.prcx  vl.prcx  vl.prcxml
romf/accessories/: motion_list.yml
romf/body/: motion_list.yml
romf/monsterball/: motion_list.yml
romf/redshell/: motion_list.yml
romf/ui_message/: msg_menu.xmsbt  msg_name.xmsbt  msg_tips.xmsbt  msg_tips.xmsbt.txt
src/: data.rs  imports.rs  lib.rs  singleslot.rs  vars.rs
src/goomba/: agent_init.rs  frame.rs  mod.rs  temp.rs  vtable.rs
src/goomba/accessories/: acmd.rs  mod.rs  status.rs
src/goomba/acmd/: entry.rs  mod.rs
src/goomba/acmd/aerials/: attackairb.rs  attackairf.rs  attackairhi.rs  attackairlw.rs  attackairn.rs  mod.rs
src/goomba/acmd/entry_appeal/: appeals.rs  entry.rs  mod.rs
src/goomba/acmd/finalsmash/: attack.rs  dash.rs  end.rs  hit_return.rs  mod.rs  start.rs  vortex.rs
src/goomba/acmd/movement/: attacks.rs  cliff.rs  dash_run_turn.rs  down.rs  escape_passive_slip.rs  jump.rs  misc.rs  mod.rs  step.rs  walk.rs
src/goomba/acmd/results/: mod.rs  win1.rs  win2.rs  win3.rs
src/goomba/acmd/smashes/: attackhi4.rs  attacklw4.rs  attacks4.rs  mod.rs
src/goomba/acmd/specials/: mod.rs  specialhi.rs  speciallw.rs  specialn.rs  specials.rs
src/goomba/acmd/taunts/: appealhi.rs  appeallw.rs  appeals.rs  mod.rs
src/goomba/acmd/throws/: catch.rs  mod.rs  throwb.rs  throwf.rs  throwhi.rs  throwlw.rs
src/goomba/acmd/tilts/: attack.rs  attackhi3.rs  attacklw3.rs  attacks3.rs  mod.rs
src/goomba/dev_only/: gameplay.rs  mod.rs  reveal_intro.rs  testing.rs
src/goomba/redshell/: acmd.rs  mod.rs  status.rs
src/goomba/status/: appeal.rs  attack.rs  attackair.rs  attacks4.rs  entry_appeal.rs  finalsmash.rs  landing.rs  mod.rs  specials.rs
src/goomba/status/specials/: mod.rs  specialhi.rs  speciallw.rs  specialn.rs  specials.rs
src/goomba/tower/: acmd.rs  mod.rs  status.rs
