[package]
name = "smashline_kuribo"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }

smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash_rs = { git = "https://github.com/blu-dev/smash-rs", package = "smash" }

sharpsmashlinesuite = { path = "../../SharpSmashlineSuite"}
wubor_utils = { path = "../../Wubor-Utils", optional = true }

lazy_static = "1.4.0"
param_config = { path = "../../paramconfig", optional = true }
the_csk_collection_api = { git = "https://github.com/Coolsonickirby/the_csk_collection_api", optional = true }
smash-bgm-property = {version = "1.2.0",  optional = true }
hash40 = {version = "1.1", optional = true }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }

toml = { version = "0.5.2", optional = true }
serde = { version = "1.0.136", optional = true }
serde_derive = { version = "1.0.136", optional = true }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", optional = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[features]
dev = ["the_csk_collection_api"]
hookstatus = []
default = ["param_config","the_csk_collection_api","smash-bgm-property","hash40","wubor_utils"]
#"toml","serde","serde_derive","skyline-web"]
devhook = ["param_config","the_csk_collection_api","smash-bgm-property","hash40","wubor_utils"]
#"toml","serde","serde_derive","skyline-web"]